--- a/WellmeadowsProjects/WellmeadowsProjects.vbproj
+++ b/WellmeadowsProjects/WellmeadowsProjects.vbproj
@@ -85,6 +85,42 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add_InPatient.Designer.vb">
+      <DependentUpon>Add_InPatient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_InPatient.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Medicine.Designer.vb">
+      <DependentUpon>Add_Medicine.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Medicine.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Patient.Designer.vb">
+      <DependentUpon>Add_Patient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Patient.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_PatientVisit.Designer.vb">
+      <DependentUpon>Add_PatientVisit.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_PatientVisit.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Presscipt.Designer.vb">
+      <DependentUpon>Add_Presscipt.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Presscipt.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Supplies.Designer.vb">
+      <DependentUpon>Add_Supplies.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Supplies.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -93,11 +129,41 @@
     <Compile Include="DataSet1.vb">
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Edit_InPatient.Designer.vb">
+      <DependentUpon>Edit_InPatient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_InPatient.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHome.Designer.vb">
+      <DependentUpon>FormHome.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormHome.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InPatient.Designer.vb">
+      <DependentUpon>InPatient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="InPatient.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainStaff.Designer.vb">
+      <DependentUpon>MainStaff.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MainStaff.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Medicine.Designer.vb">
+      <DependentUpon>Medicine.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Medicine.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -116,16 +182,85 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Patient.Designer.vb">
+      <DependentUpon>Patient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Patient.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Patient_Presscipt.Designer.vb">
+      <DependentUpon>Patient_Presscipt.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Patient_Presscipt.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Patient_Visit.Designer.vb">
+      <DependentUpon>Patient_Visit.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Patient_Visit.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Supplies.Designer.vb">
+      <DependentUpon>Supplies.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Supplies.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Add_InPatient.resx">
+      <DependentUpon>Add_InPatient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Medicine.resx">
+      <DependentUpon>Add_Medicine.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Patient.resx">
+      <DependentUpon>Add_Patient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_PatientVisit.resx">
+      <DependentUpon>Add_PatientVisit.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Presscipt.resx">
+      <DependentUpon>Add_Presscipt.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Supplies.resx">
+      <DependentUpon>Add_Supplies.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_InPatient.resx">
+      <DependentUpon>Edit_InPatient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormHome.resx">
+      <DependentUpon>FormHome.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InPatient.resx">
+      <DependentUpon>InPatient.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainStaff.resx">
+      <DependentUpon>MainStaff.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Medicine.resx">
+      <DependentUpon>Medicine.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Patient.resx">
+      <DependentUpon>Patient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Patient_Presscipt.resx">
+      <DependentUpon>Patient_Presscipt.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Patient_Visit.resx">
+      <DependentUpon>Patient_Visit.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Supplies.resx">
+      <DependentUpon>Supplies.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +294,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon-park-solid_back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Line 3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
