--- a/WellmeadowsProjects/WellmeadowsProjects.vbproj
+++ b/WellmeadowsProjects/WellmeadowsProjects.vbproj
@@ -85,10 +85,59 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataSet1.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet1.xsd</DependentUpon>
+    <Compile Include="Add_OutPantientToWardForm.Designer.vb">
+      <DependentUpon>Add_OutPantientToWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_OutPantientToWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_PateintToWardForm.Designer.vb">
+      <DependentUpon>Add_PateintToWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_PateintToWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_StaffForm.Designer.vb">
+      <DependentUpon>Add_StaffForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_StaffForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_StaffInWardForm.Designer.vb">
+      <DependentUpon>Add_StaffInWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_StaffInWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_WaitingListForm.Designer.vb">
+      <DependentUpon>Add_WaitingListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_WaitingListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_PateintToWardForm.Designer.vb">
+      <DependentUpon>Edit_PateintToWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_PateintToWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_StaffInWardForm.Designer.vb">
+      <DependentUpon>Edit_StaffInWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_StaffInWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_WaitingListForm.Designer.vb">
+      <DependentUpon>Edit_WaitingListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_WaitingListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HomeForm.Designer.vb">
+      <DependentUpon>HomeForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="HomeForm.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
@@ -101,6 +150,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -112,8 +162,77 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OutPatientForm.Designer.vb">
+      <DependentUpon>OutPatientForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OutPatientForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatientInWardForm.Designer.vb">
+      <DependentUpon>PatientInWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="PatientInWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StaffForm.Designer.vb">
+      <DependentUpon>StaffForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StaffForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StaffInWardForm.Designer.vb">
+      <DependentUpon>StaffInWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StaffInWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaitingListForm.Designer.vb">
+      <DependentUpon>WaitingListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="WaitingListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WardForm.Designer.vb">
+      <DependentUpon>WardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="WardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_OutPantientToWardForm.Designer.vb">
+      <DependentUpon>Edit_OutPantientToWardForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_OutPantientToWardForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Add_OutPantientToWardForm.resx">
+      <DependentUpon>Add_OutPantientToWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_PateintToWardForm.resx">
+      <DependentUpon>Add_PateintToWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_StaffForm.resx">
+      <DependentUpon>Add_StaffForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_StaffInWardForm.resx">
+      <DependentUpon>Add_StaffInWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_WaitingListForm.resx">
+      <DependentUpon>Add_WaitingListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_PateintToWardForm.resx">
+      <DependentUpon>Edit_PateintToWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_StaffInWardForm.resx">
+      <DependentUpon>Edit_StaffInWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_WaitingListForm.resx">
+      <DependentUpon>Edit_WaitingListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HomeForm.resx">
+      <DependentUpon>HomeForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
@@ -123,19 +242,29 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="OutPatientForm.resx">
+      <DependentUpon>OutPatientForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatientInWardForm.resx">
+      <DependentUpon>PatientInWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StaffForm.resx">
+      <DependentUpon>StaffForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StaffInWardForm.resx">
+      <DependentUpon>StaffInWardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WaitingListForm.resx">
+      <DependentUpon>WaitingListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WardForm.resx">
+      <DependentUpon>WardForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_OutPantientToWardForm.resx">
+      <DependentUpon>Edit_OutPantientToWardForm.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="DataSet1.xsc">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet1.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet1.xss">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -155,6 +284,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Group 8.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\home.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\staff.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dashbord.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\medical.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\patient.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ward.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
