--- a/WellmeadowsProjects/App.config
+++ b/WellmeadowsProjects/App.config
@@ -7,7 +7,7 @@
             connectionString="DATA SOURCE=digilab.sut.ac.th:1521/XEPDB1;TNS_ADMIN=C:\Users\hungo\Oracle\network\admin;PERSIST SECURITY INFO=True;USER ID=B6301170"
             providerName="Oracle.ManagedDataAccess.Client" />
         <add name="WellmeadowsProjects.My.MySettings.WellmeadowsConnectionString"
-            connectionString="Data Source=Zero\DATABASE66;Initial Catalog=Wellmeadows;Integrated Security=True"
+            connectionString="Data Source=BOB1EE\SQLEXPRESS;Initial Catalog=Wellmeadows;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
