update ward CRUD

--- a/WellmeadowsProjects/WellmeadowsProjects.vbproj
+++ b/WellmeadowsProjects/WellmeadowsProjects.vbproj
@@ -169,6 +169,12 @@
     <Compile Include="Add_WaitingListForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Add_Ward.Designer.vb">
+      <DependentUpon>Add_Ward.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Ward.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Edit_Medicine.Designer.vb">
       <DependentUpon>Edit_Medicine.vb</DependentUpon>
     </Compile>
@@ -221,6 +227,12 @@
       <DependentUpon>Edit_WaitingListForm.vb</DependentUpon>
     </Compile>
     <Compile Include="Edit_WaitingListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Ward.Designer.vb">
+      <DependentUpon>Edit_Ward.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_Ward.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HomeForm.Designer.vb">
@@ -388,6 +400,9 @@
     <EmbeddedResource Include="Add_Supplies.resx">
       <DependentUpon>Add_Supplies.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Add_Ward.resx">
+      <DependentUpon>Add_Ward.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Edit_InPatient.resx">
       <DependentUpon>Edit_InPatient.vb</DependentUpon>
     </EmbeddedResource>
@@ -408,6 +423,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_VisitPatient.resx">
       <DependentUpon>Edit_VisitPatient.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_Ward.resx">
+      <DependentUpon>Edit_Ward.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InPatient.resx">
       <DependentUpon>InPatient.vb</DependentUpon>
