update merge lhet report - successfully 100%

--- a/WellmeadowsProjects/App.config
+++ b/WellmeadowsProjects/App.config
@@ -1,16 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WellmeadowsProjects.My.MySettings.ConnectionString"
-            connectionString="DATA SOURCE=digilab.sut.ac.th:1521/XEPDB1;TNS_ADMIN=C:\Users\hungo\Oracle\network\admin;PERSIST SECURITY INFO=True;USER ID=B6301170"
-            providerName="Oracle.ManagedDataAccess.Client" />
-        <add name="WellmeadowsProjects.My.MySettings.WellmeadowsConnectionString"
-            connectionString="Data Source=Zero\DATABASE66;Initial Catalog=Wellmeadows;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="WellmeadowsProjects.My.MySettings.ConnectionString" connectionString="DATA SOURCE=digilab.sut.ac.th:1521/XEPDB1;TNS_ADMIN=C:\Users\hungo\Oracle\network\admin;PERSIST SECURITY INFO=True;USER ID=B6301170" providerName="Oracle.ManagedDataAccess.Client" />
+        <add name="WellmeadowsProjects.My.MySettings.WellmeadowsConnectionString" connectionString="Data Source=Zero\DATABASE66;Initial Catalog=Wellmeadows;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.3" newVersion="7.0.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
