--- a/WellmeadowsProjects/WellmeadowsProjects.vbproj
+++ b/WellmeadowsProjects/WellmeadowsProjects.vbproj
@@ -66,6 +66,24 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1586.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.ManagedDataAccess">
       <HintPath>..\..\..\..\..\..\program files\microsoft visual studio\2022\community\common7\ide\extensions\4hb0ngeg.mcf\Assemblies\DataProviders\Oracle.ManagedDataAccess.dll</HintPath>
     </Reference>
@@ -336,6 +354,36 @@
     <Compile Include="popup_supplies.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Report_EachWard.Designer.vb">
+      <DependentUpon>Report_EachWard.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Report_EachWard.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_In_PatientForm.Designer.vb">
+      <DependentUpon>Report_In_PatientForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Report_In_PatientForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_Out_PatientForm.Designer.vb">
+      <DependentUpon>Report_Out_PatientForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Report_Out_PatientForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_PrescriptForm.Designer.vb">
+      <DependentUpon>Report_PrescriptForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Report_PrescriptForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_WaitinglistForm.Designer.vb">
+      <DependentUpon>Report_WaitinglistForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Report_WaitinglistForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Supplies.Designer.vb">
       <DependentUpon>Supplies.vb</DependentUpon>
     </Compile>
@@ -508,6 +556,26 @@
     <EmbeddedResource Include="popup_supplies.resx">
       <DependentUpon>popup_supplies.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Report_EachWard.resx">
+      <DependentUpon>Report_EachWard.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_In-PatientForm.rdlc" />
+    <EmbeddedResource Include="Report_In_PatientForm.resx">
+      <DependentUpon>Report_In_PatientForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_OutPatient.rdlc" />
+    <EmbeddedResource Include="Report_Out_PatientForm.resx">
+      <DependentUpon>Report_Out_PatientForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_Prescript.rdlc" />
+    <EmbeddedResource Include="Report_PrescriptForm.resx">
+      <DependentUpon>Report_PrescriptForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_Waitinglist.rdlc" />
+    <EmbeddedResource Include="Report_WaitinglistForm.resx">
+      <DependentUpon>Report_WaitinglistForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_Ward.rdlc" />
     <EmbeddedResource Include="Supplies.resx">
       <DependentUpon>Supplies.vb</DependentUpon>
     </EmbeddedResource>
@@ -545,6 +613,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="WellmeadowsDataSet.xsc">
       <DependentUpon>WellmeadowsDataSet.xsd</DependentUpon>
     </None>
@@ -613,6 +682,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\staff_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlServerTypes\Loader.cs" />
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
