--- a/WellmeadowsProjects/WellmeadowsProjects.vbproj
+++ b/WellmeadowsProjects/WellmeadowsProjects.vbproj
@@ -151,6 +151,12 @@
     <Compile Include="Add_Presscipt.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Add_Staff_ExpForm1.Designer.vb">
+      <DependentUpon>Add_Staff_ExpForm1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Staff_ExpForm1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Add_Supplies.Designer.vb">
       <DependentUpon>Add_Supplies.vb</DependentUpon>
     </Compile>
@@ -378,6 +384,12 @@
     <Compile Include="popup_shifts.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="popup_staff.Designer.vb">
+      <DependentUpon>popup_staff.vb</DependentUpon>
+    </Compile>
+    <Compile Include="popup_staff.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="popup_supplies.Designer.vb">
       <DependentUpon>popup_supplies.vb</DependentUpon>
     </Compile>
@@ -511,6 +523,9 @@
     <EmbeddedResource Include="Add_Presscipt.resx">
       <DependentUpon>Add_Presscipt.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Add_Staff_ExpForm1.resx">
+      <DependentUpon>Add_Staff_ExpForm1.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Add_Supplies.resx">
       <DependentUpon>Add_Supplies.vb</DependentUpon>
     </EmbeddedResource>
@@ -622,6 +637,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="popup_shifts.resx">
       <DependentUpon>popup_shifts.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="popup_staff.resx">
+      <DependentUpon>popup_staff.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="popup_supplies.resx">
       <DependentUpon>popup_supplies.vb</DependentUpon>
